--- a/MoverioApp/app/src/main/res/values/strings.xml
+++ b/MoverioApp/app/src/main/res/values/strings.xml
@@ -18,7 +18,12 @@
     <string name="courseTitle2">Model 2</string>
     <string name="courseListTitle">Wave in/out and make a fist to choose a course</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- STEP LIST -->
+
+    <string name="stepListTitle">Wave in/out and make a fist to choose a step</string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_course_list">Available Courses</string>
     <string name="title_activity_lesson_list">Available Lessons</string>
