added text instruction

--- a/MoverioApp/app/src/main/res/values/strings.xml
+++ b/MoverioApp/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_course_list">Available Courses</string>
     <string name="title_activity_lesson_list">Available Lessons</string>
-    <sstring name="title_activity_study_lesson">Study Lesson Activity</sstring>
-    <string name="dialogueMsg">Make fist to switch to video and finger-spread to open the menu option </string>
+    <string name="title_activity_study_lesson">Study Lesson Activity</string>
+    <string name="dialogueMsg">Fist -> Switch to video \n\nFinger-spread -> Open Menu Option </string>
 
 </resources>
