--- a/MoverioApp/app/src/main/res/values/strings.xml
+++ b/MoverioApp/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
     <string name="title_activity_study_lesson">Study Lesson Activity</string>
     <string name="dialogueMsg">Fist -> Switch to video \n\nFinger-spread -> Open Menu Option </string>
 
+        <string name="overview">The purpose of this experiment is to determine the usability
+        of wearable devices for military training and education. You get smart glasses,
+        a smartphone, and a smart armband for the experiment. You will receive instructions
+        on the smart glasses and make hand gestures to navigate the content on the smart glasses.</string>
 </resources>
